feat: improvement swagger
