# routes/api.php
@@ -8,13 +8,14 @@ use Illuminate\Support\Facades\Route;
 
 
 Route::prefix('v1')->group(function () {
-    Route::post('user', [UserController::class, 'store']);
-    Route::post('/login', [AuthController::class, 'login']);
-
+    Route::post('users', [UserController::class, 'store']);
+    Route::post('login', [AuthController::class, 'login']);
+    
     Route::middleware('auth:api')->group(function () {
-        Route::put('update', [UserController::class, 'update']);
-        Route::get('', [UserController::class, 'delete']);
-        Route::get('show', [UserController::class, 'show']);
+        Route::put('users', [UserController::class, 'update']);
+        Route::get('users', [UserController::class, 'delete']);
+        Route::get('users', [UserController::class, 'show']);
         Route::apiResource('product', ProductController::class);
+        Route::post('logout', [AuthController::class, 'logout']);
     });
 });
